# simplexity

./: .gitignore  BOS_EOS_CHANGES.md  CLAUDE.md  FACTORED_GENERATOR_SUMMARY.md  HYDRA_CONFIG_EXAMPLE.md  MATS_2025_README.md  PR_REVIEW_REPORT.md  README.md  README_PRODUCT.md  RLVR_TRAINING.md  VOCAB_MIGRATION_GUIDE.md  coin_config_generator.py  pyproject.toml  test_factored_smoke.py
.cursor/rules/: 00_index.mdc  01_framework_overview.mdc  02_hydra_configuration.mdc  03_experiment_workflow.mdc  04_generative_processes.mdc  05_predictive_models.mdc  06_training_system.mdc  07_persistence.mdc  08_evaluation.mdc  09_logging.mdc  10_testing.mdc  11_code_style.mdc  12_common_patterns.mdc  README.md  create-prd.mdc  create-tasks.mdc  process-task-list.mdc  simplexity-agent.mdc
.github/: CODEOWNERS
.github/workflows/: README.md  claude-code-review.yml  claude.yml  copilot-review.yml  e2e-tests.yaml  generate-pr-description.yml  merge-tests.yaml  simplexity.yaml
.taskmaster/docs/: prd.txt
docs/: databricks_model_registry.md  llm_context_loading_guide.md  research_extension_config_template.yaml  research_extension_guide.md  research_extension_patterns.md  research_extension_summary.md  research_extension_template.py  visualization.md
documentation/: README.md
documentation/1.0-Introduction/: 1.1-Overview.md  1.2-Target-Users.md
documentation/2.0-Getting-Started/: 2.1-Installation.md  2.2-Core-Concepts.md
documentation/3.0-Running-Experiments/: 3.1-Run-Experiment-Script.md  3.2-Configuration-Hydra.md  3.3-Experiment-YAML-Structure.md  3.4-Hyperparameter-Sweeping.md
documentation/4.0-Key-Components/: 4.1-Generative-Processes.md  4.2-Predictive-Models.md  4.3-Training.md  4.4-Evaluation.md  4.5-Logging.md  4.6-Persistence.md
documentation/5.0-Extending-the-Framework/: 5.1-New-Generative-Process.md  5.2-New-Predictive-Model.md  5.3-Custom-Training-Loops.md
documentation/6.0-For-LLM-Agents/: 6.1-Interacting-with-Configs.md  6.2-Programmatic-Execution.md  6.3-Interpreting-Outputs.md  6.4-Example-Prompts-and-Rules.md  comprehensive_agent_guide.md
documentation/7.0-Troubleshooting/: 7.1-Common-Issues.md
epsilon_transformers/: train.py
epsilon_transformers/analysis/: activation_analysis.py
epsilon_transformers/training/: configs.py  models.py  trainer.py  utils.py
examples/: managed_run_demo.py  managed_run_with_visuals.py  mlflow_workspace_registry_demo.py  test_metric_tracker.py  visualization_3d_demo.py  visualization_demo.py
examples/basic_mess3/: README.md  config.py  train.py
examples/configs/: demo_config.py  demo_config.yaml  demo_config_with_visuals.py  demo_config_with_visuals.yaml  logging.yaml
mlruns/0/: meta.yaml
mlruns/341182093635126558/: meta.yaml
notebooks/: benchmark_generate.ipynb  download_metrics.py  experiment_loader_demo.ipynb  icl.ipynb  induction_heads.ipynb  mess3_smoke.ipynb  model_inspection.ipynb  myopic_entropy.ipynb  name_losses.npz  pytorch.ipynb  simple_network.ipynb  train.ipynb  train_transformerlens_mess3.ipynb  transformerlens_mess3_simple.ipynb  visualize_2_simplex.ipynb
scripts/: analysis_plots_20250115.py  capture_git_metadata.py  prd.md  smoke_test_product_generator.py
simplexity/: __init__.py  data_structures.py  exceptions.py  hydra_helpers.py  load_objects.py  log_math.py  logger.py  lr_schedulers.py  penzai_utils.py  run.py  run_experiment.py  run_rlvr.py  run_transformerlens.py  train.py  train_model.py  train_model_rnn.py
simplexity/activations/: activation_analyses.py  activation_tracker.py  activation_visualizations.py  visualization_configs.py  visualization_persistence.py
simplexity/analysis/: USAGE.md  __init__.py  activation_analysis.py  data_adapters.py  layerwise_analysis.py  linear_regression.py  load_data.py  normalization.py  pca.py  plot_configs.py  plot_style_configs.py  regression.py  tracker.py
simplexity/configs/: addition_pretraining.yaml  config.py  experiment.yaml  instance_config.py  load.yaml  load_config.py  rlvr_config.py  train_model.yaml  train_rlvr_model.yaml  train_rlvr_test.yaml  train_rnn.yaml  transformerlens_mess3.yaml
simplexity/data_structures/: collection.py  heap.py  queue.py  stack.py
simplexity/evaluation/: evaluate_equinox_model.py  evaluate_model.py  evaluate_penzai_model.py  evaluate_pytorch_model.py  metric_functions.py
simplexity/generative_processes/: alternating_process.py  arithmetic_factory.py  arithmetic_process.py  assertions.py  builder.py  cartesian_product_process.py  data_structures.py  factored_generative_process.py  factored_generator.py  fixed_state_sampler.py  generalized_hidden_markov_model.py  generative_process.py  generator.py  hidden_markov_model.py  log_math.py  mixed_state_presentation.py  non_ergodic_state_sampler.py  product_generator.py  state_sampler.py  torch_generator.py  transition_matrices.py  utils.py
simplexity/loaders/: __init__.py  experiment_loader.py
simplexity/logging/: file_logger.py  logger.py  mlflow_logger.py  mlflow_reader.py  print_logger.py  run_context.py  run_reader.py
simplexity/metrics/: metric_tracker.py  metrics.py
simplexity/persistence/: local_equinox_persister.py  local_penzai_persister.py  local_persister.py  local_pytorch_persister.py  mlflow_persister.py  model_persister.py  s3_persister.py  utils.py
simplexity/predictive_models/: custom_layers.py  gru_rnn.py  gruformer.py  mamba.py  predictive_model.py  pytorch_transformer.py  rnn.py  save_activations.py  transformer.py  transformerlens_model.py  types.py
simplexity/process/: GHMM.py
simplexity/run_management/: components.py  environment_logging.py  mlflow_loaders.py  run_logging.py  run_management.py  structured_configs.py
simplexity/structured_configs/: activation_tracker.py  base.py  generative_process.py  instance.py  learning_rate_scheduler.py  logging.py  metric_tracker.py  mlflow.py  (+5 more)
tests/: array_with_patchable_device.py  assertions.py  test_data_structures.py  test_integration.py  test_log_math.py  test_logger.py  test_lr_schedulers.py  test_mixed_state_presentation.py  test_penzai_utils.py  test_vocab_computation.py
(+379 files in other folders)
