[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simplexity"]

[project]
name = "simplexity"
version = "0.1"
description = "Computational Mechanics of sequence prediction models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.24",
    "chex",
    "dotenv",
    "equinox",
    "hydra-core",
    "hydra-optuna-sweeper",
    "jax",
    "jupyter",
    "matplotlib",
    "mlflow",
    "optax",
    "orbax-checkpoint",
    "pandas",
    "penzai",
    "treescope",
]

[project.optional-dependencies]
aws = ["boto3"]
cuda = ["jax[cuda12_pip]"]
dev = ["jaxtyping", "nbqa", "pyright", "pytest", "pytest-cov", "ruff"]
mac = ["jax-metal"]
pytorch = ["torch"]
transformerlens = ["torch", "transformer-lens", "better-abc"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100",   # undocumented-public-module
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "SIM108", # Use the ternary operator
]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "D",   # pydocstyle https://www.pydocstyle.org/en/stable/error_codes.html
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"*.ipynb" = ["D"]

[tool.pyright]
typeCheckingMode = "standard"
