[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simplexity"]

[project]
name = "simplexity"
version = "0.1"
description = "Computational Mechanics of sequence prediction models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.24",
    "chex",
    "dotenv",
    "equinox>=0.13.0",
    "hydra-core",
    "hydra-optuna-sweeper",
    "jax>=0.8.0",
    "jupyter",
    "matplotlib",
    "mlflow>=3.0.0",
    "optax",
    "orbax-checkpoint",
    "pandas",
    "penzai",
    "plotly",
    "torch>=2.9.0",
    "transformer-lens>=2.15.4",
    "treescope",
]

[project.optional-dependencies]
aws = ["boto3"]
cuda = [
    "jax[cuda12_pip]",
    "jax-cuda12-plugin>=0.8.0",
    "jax-cuda12-pjrt>=0.8.0",
    "nvidia-cuda-runtime-cu12>=12.6.0",
    "nvidia-cudnn-cu12>=9.8.0",
    "nvidia-cublas-cu12>=12.6.0",
    "nvidia-cufft-cu12>=11.3.0",
    "nvidia-curand-cu12>=10.3.0",
    "nvidia-cusolver-cu12>=11.7.0",
    "nvidia-cusparse-cu12>=12.5.0",
    "nvidia-cuda-cupti-cu12>=12.6.0",
    "nvidia-cuda-nvcc-cu12>=12.8.0",
]
dev = ["jaxtyping", "nbqa", "pyright", "pytest", "pytest-cov", "ruff"]
mac = ["jax-metal"]
pytorch = ["torch", "transformer-lens"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100",   # undocumented-public-module
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "SIM108", # Use the ternary operator
]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "D",   # pydocstyle https://www.pydocstyle.org/en/stable/error_codes.html
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"*.ipynb" = ["D"]

[tool.pyright]
typeCheckingMode = "standard"
