[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simplexity"]

[project]
name = "simplexity"
version = "0.1"
description = "Computational Mechanics of sequence prediction models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.24",
    "chex",
    "dotenv",
    "equinox",
    "hydra-core",
    "hydra-optuna-sweeper",
    "jax",
    "jupyter",
    "matplotlib",
    "mlflow>=3.0.0",
    "optax",
    "orbax-checkpoint",
    "pandas",
    "penzai",
    "plotly",
    "treescope",
]

[project.optional-dependencies]
aws = ["boto3"]
cuda = ["jax[cuda12_pip]"]
dev = [
    "diff-cover",
    "jaxtyping",
    "nbqa",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]
# mac = ["jax-metal"]
pytorch = ["torch"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100",   # undocumented-public-module
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "SIM108", # Use the ternary operator
]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "D",   # pydocstyle https://www.pydocstyle.org/en/stable/error_codes.html
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"*.ipynb" = ["D"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=simplexity",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # Note: --cov-fail-under is not set by default to allow gradual improvement
    # New code in PRs is still strictly checked via diff-cover (80% threshold)
    # To check overall coverage locally, use: pytest --cov-fail-under=80
]

[tool.coverage.run]
source = ["simplexity"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/build/*",
    "*/dist/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2
# Note: fail_under is not set to allow gradual improvement
# New code in PRs is strictly checked via diff-cover (80% threshold)
# To enforce overall coverage, set fail_under = 80.0
